--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap'); /* You can add global styles to this file, and also import other style files */
 body {
-  background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=49285");
+  /*background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=49285");*/
 }
 
 body {
