--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<main>
-  <a [routerLink]="['/']">
-    <header class="brand-name">
-      <img class="brand-logo" src="/assets/house.svg" alt="logo" aria-hidden="true">
-      <strong>Homes</strong>
-    </header>
-  </a>
-  <section class="content">
-    <router-outlet></router-outlet>
-  </section>
-</main>
+<header>
+  <h1>header</h1>
+    <h2 style="padding:10px"><a href="/add"><button>Add</button></a></h2>
+</header>
+ <router-outlet></router-outlet>
+
+ <footer>
+     <h1> footer</h1>
+ </footer>
