--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,32 @@
-<main>
-  <a [routerLink]="['/']">
-    <header class="brand-name">
-      <img class="brand-logo" src="/assets/house.svg" alt="logo" aria-hidden="true">
-      <strong>Homes</strong>
-    </header>
-  </a>
-  <section class="content">
+<header>
+    <h1><a routerLink="/">JWT Authorization Example</a></h1>
+    <nav>
+        <a routerLink="/"
+           routerLinkActive="active"
+           [routerLinkActiveOptions]="{exact: true}"
+        >Start</a>
+        <a *ngIf="canAccessUsers()"
+           routerLink="/users"
+           routerLinkActive="active">Users</a>
+        <a *ngIf="canAccessItems()"
+           routerLink="/items"
+           routerLinkActive="active">Items</a>
+    </nav>
+</header>
+
+<div class="router-outlet">
     <router-outlet></router-outlet>
-  </section>
-</main>
+</div>
+
+
+<footer><div *ngIf="getUsername()">
+    {{ getUsername() }}
+    <button class="logout" (click)="logout()">Logout</button>
+</div>
+    <div *ngIf="!getUsername()">
+        Not logged in
+    </div></footer>
+
+<footer>
+    Piotr Kaczałko
+</footer>
